Update v1.8.0