@@ -1,5 +1,6 @@
 package me.dreamdevs.randomlootchest.menus;
 
+import me.dreamdevs.randomlootchest.api.Language;
 import me.dreamdevs.randomlootchest.api.inventory.BookItemMenu;
 import me.dreamdevs.randomlootchest.api.inventory.buttons.ActionMenuItem;
 import me.dreamdevs.randomlootchest.api.inventory.buttons.MenuItem;
@@ -7,15 +8,13 @@ import me.dreamdevs.randomlootchest.RandomLootChestMain;
 import org.bukkit.ChatColor;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class ExtensionMenu extends BookItemMenu {
 
 	public ExtensionMenu() {
-		super(RandomLootChestMain.getInstance().getMessagesManager().getMessage("extensions-menu-title"),
-				buildItems(), true, false);
+		super(Language.MENU_EXTENSIONS_TITLE.toString(), buildItems(), true, false);
 	}
 
 	private static List<MenuItem> buildItems() {
@@ -25,9 +24,9 @@ public class ExtensionMenu extends BookItemMenu {
 				extension.reloadConfig();
 				extension.onExtensionDisable();
 				extension.onExtensionEnable();
-				event.getPlayer().sendMessage(RandomLootChestMain.getInstance().getMessagesManager().getMessage("extensions-reload-config").replaceAll("%EXTENSION_NAME%", extension.getDescription().getExtensionName()));
+				event.getPlayer().sendMessage(Language.GENERAL_EXTENSION_CONFIG_RELOADED.toString().replace("%EXTENSION_NAME%", extension.getDescription().getExtensionName()));
 			}, new ItemStack(extension.getDescription().getExtensionMaterial()));
-			menuItem.setLore(Arrays.asList((extension.isEnabled()) ? ChatColor.GREEN+"Enabled" : ChatColor.RED+"Disabled"));
+			menuItem.setLore(List.of((extension.isEnabled()) ? ChatColor.GREEN + "Enabled" : ChatColor.RED + "Disabled"));
 			return menuItem;
 		}).collect(Collectors.toList());
 	}
